# vme-nmpc

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  TODO.md  countCodeExclude.txt  countCodeLines.sh  debugout.py  example.in  hallway_oneobst.in  nav2-interface.txt  oldexample.in  vme-nmpc.sublime-project  vme-nmpc.sublime-workspace  vme-plot.py
doc/html/: annotated.html  annotated.js  class__robot_8cpp.html  class__robot_8cpp__incl.map  class__robot_8cpp__incl.md5  class__robot_8cpp_source.html  class__robot_8h.html  class__robot_8h__dep__incl.map  class__robot_8h__dep__incl.md5  class__robot_8h_source.html  classes.html  classrobot-members.html  classrobot.html  classrobot.js  classrobot_a1c7b39f7b02e282220ec8978770eaeee_icgraph.map  classrobot_a1c7b39f7b02e282220ec8978770eaeee_icgraph.md5  classrobot_a2d9f6439790b1c73e02878d27826109f_cgraph.map  classrobot_a2d9f6439790b1c73e02878d27826109f_cgraph.md5  classrobot_a35ecdc59dfd28155d9500e0d324f9025_icgraph.map  classrobot_a35ecdc59dfd28155d9500e0d324f9025_icgraph.md5  classrobot_a3fe4a564af34323851bc1bcc7481e865_cgraph.map  classrobot_a3fe4a564af34323851bc1bcc7481e865_cgraph.md5  classrobot_a61dbfda8c9239191e1819e9e9c9a3307_icgraph.map  classrobot_a61dbfda8c9239191e1819e9e9c9a3307_icgraph.md5  classrobot_aeb00885111963664c3b4c0d64db1c42e_icgraph.map  classrobot_aeb00885111963664c3b4c0d64db1c42e_icgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  errhandler_8cpp.html  errhandler_8cpp.js  errhandler_8cpp__incl.map  errhandler_8cpp__incl.md5  errhandler_8cpp_a404519733fecb82a4172f2fc29d511f7_icgraph.md5  errhandler_8cpp_source.html  errinclude_8h.html  errinclude_8h.js  errinclude_8h__dep__incl.map  errinclude_8h__dep__incl.md5  errinclude_8h__incl.map  errinclude_8h__incl.md5  (+120 more)
doc/latex/: annotated.tex  classrobot.tex  classrobot_a1c7b39f7b02e282220ec8978770eaeee_icgraph.md5  classrobot_a2d9f6439790b1c73e02878d27826109f_cgraph.md5  classrobot_a35ecdc59dfd28155d9500e0d324f9025_icgraph.md5  classrobot_a3fe4a564af34323851bc1bcc7481e865_cgraph.md5  classrobot_a61dbfda8c9239191e1819e9e9c9a3307_icgraph.md5  classrobot_aeb00885111963664c3b4c0d64db1c42e_icgraph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  doxygen.sty  errhandler_8cpp.tex  errhandler_8cpp__incl.md5  errhandler_8cpp_a404519733fecb82a4172f2fc29d511f7_icgraph.md5  errinclude_8h.tex  errinclude_8h__dep__incl.md5  errinclude_8h__incl.md5  error__codes_8h.tex  error__codes_8h__dep__incl.md5  files.tex  input_8cpp.tex  input_8cpp__incl.md5  input_8cpp_ac3a302ba089e2df4c2cfb6706c01199b_cgraph.md5  input_8cpp_ac3a302ba089e2df4c2cfb6706c01199b_icgraph.md5  input_8cpp_ad19a84e6b6de562e42e80c4ba3a6be88_cgraph.md5  input_8cpp_ad19a84e6b6de562e42e80c4ba3a6be88_icgraph.md5  input_8cpp_ad53113827b4fe0ab385a3b0f0b665eaf_cgraph.md5  input_8cpp_afc5703718754700cdc592ee59818ea16_cgraph.md5  input_8cpp_afc5703718754700cdc592ee59818ea16_icgraph.md5  nmpc_8h.tex  nmpc_8h__dep__incl.md5  nmpc_8h__incl.md5  qnu_8h.tex  qnu_8h__dep__incl.md5  refman.tex  robot_8cpp.tex  robot_8cpp__incl.md5  robot_8h.tex  robot_8h__dep__incl.md5  struct_lagrtag.tex  structnmpc__tag.tex  (+11 more)
examples/: vanilla_example.json
lib/: VmeNmpc.cpp  VmeNmpc.hpp  VmeNmpcWin.cpp
pyNMPC/: pyNMPC.py  test.py
pyNMPC/modules/: nmpc_funcs.py
research/: rough work.wxm  unroll_matrix_alg-Dth.wxm  unroll_matrix_alg-v-Dth.wxm  unroll_matrix_alg-v_Dth.wxm  unroll_matrix_alg-vx-vy.wxm
scrap/: Daemon.h  daemon (Case Conflict).h  daemon.cc
src/: AggregatorInitializer.cpp  AggregatorInitializer.hpp  CFileContainer.hpp  CLopts.cpp  CLopts.hpp  CMakeLists.txt  ClArgs.cpp  ClArgs.hpp  CliHandler.cpp  CliHandler.hpp  Daemon.cpp  Daemon.hpp  DataLogger.hpp  FdRaiiWrapper.hpp  InputFileData.cpp  InputFileData.hpp  InputFileParser.cpp  Nav2Robot.cpp  Nav2Robot.hpp  NmpcEngine.cpp  NmpcEngine.hpp  NmpcInitPkg.hpp  NmpcMinimizer.hpp  NmpcModel.cpp  NmpcModel.hpp  Observer.hpp  Obstacle.cpp  Obstacle.hpp  PathPlanner.cpp  PathPlanner.hpp  SeedPackage.cpp  SeedPackage.hpp  Subject.cpp  Subject.hpp  Target.cpp  Target.hpp  VMeCommand.cpp  VMeCommand.hpp  VMeLogger.hpp  VMeNmpcEngine.cpp  (+52 more)
src/CrossWing/: linear.h
src/Executors/: VMeDefaultExecutor.cpp  VMeDefaultExecutor.hpp
src/Loggers/: JsonLogger.cpp  JsonLogger.hpp  StdoutJsonLogger.cpp  StdoutJsonLogger.hpp  VirtualMeLogger.hpp
src/NmpcMinimizers/: VMeNaiveSdMinimizer.cpp  VMeNaiveSdMinimizer.hpp  VirtualMeSDMinimizer.cpp  VirtualMeSDMinimizer.hpp
src/NmpcModels/: VMeModel.cpp  VMeModel.hpp  VirtualMeModel.cpp  VirtualMeModel.hpp
src/ObstacleTypes/: PointObstacle.cpp  PointObstacle.hpp
src/PathPlanners/: VMePathPlanner.cpp  VMePathPlanner.hpp
src/yagsbpl/: yagsbpl_base.cpp  yagsbpl_base.h
src/yagsbpl/planners/: A_star.cpp  A_star.h
tests/: CMakeLists.txt  FakeExecutor.cpp  FakeExecutor.hpp  FakeMinimizer.cpp  FakeMinimizer.hpp  FakePathPlanner.hpp  FakeVMeMinimizer.cpp  FakeVMeMinimizer.hpp  FakeVMeModel.cpp  FakeVMeModel.hpp  FakeVirtualMeMinimizer.cpp  FakeVirtualMeMinimizer.hpp  FakeVirtualMeModel.cpp  FakeVirtualMeModel.hpp  NmpcEngineTest.cpp  NmpcModelTest.cpp  ObstacleContainerTest.cpp  ObstacleTest.cpp  PathPlannerTest.cpp  VMeNmpcEngineTest.cpp  VirtualMe-Engine-Model-SDMinimizer-integrationTest.cpp  VirtualMeModelTest.cpp  VirtualMeNmpcEngineTest.cpp  catch.hpp  itest-VMe-Model_NaiveSdMinimizer.cpp  itest-virtualME_Model-SDmin.cpp  iutest-CliHandler-Daemon.cpp  test_helpers.cpp  test_helpers.hpp  utest-JsonLogger.cpp  utest-ObstacleContainer.cpp  utest-StdoutJsonLogger.cpp  utest-VMeModel.cpp  utest-VMeNaiveSdMinimizer.cpp  utest-VMeNmpcEngine.cpp  utest-VMeNmpcKernel.cpp  utest-VirtualMeModel.cpp  utest-VirtualMeNmpcEngine.cpp
tools/: analyse_output.py  go-home.py  gohome.py  joyPad-controller.py  json-log-animate.py  live-path-plot.py  make_infiles.py  motiontest.py  nmpc_output_parse.py  orientationtest.py  parse_nmpc.py  plot_output.py  plot_output_movingobst.py  quick_obst_generator.py  test.csv  vme-plot.py
tools/Intel-Edison/: joyPad-vme.py
tools/miscellaneous/: motiontest.py  (+2 more)
(+67 files in other folders)
